[gd_scene load_steps=16 format=3 uid="uid://d0xlphou0hs56"]

[ext_resource type="Script" uid="uid://dxlxjsj4dd4xd" path="res://scenes/mod_manager.gd" id="1_m2rmo"]
[ext_resource type="Script" uid="uid://dfdtyckl77df4" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="2_ti26n"]
[ext_resource type="Texture2D" uid="uid://bkb6hyrffjxlq" path="res://resources/themes/folder.svg" id="3_2j5pp"]
[ext_resource type="Texture2D" uid="uid://cfx2ivv7ag1q0" path="res://resources/themes/github-mark-white.svg" id="3_juk12"]
[ext_resource type="Script" uid="uid://dx2vfs4rouhu2" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="3_t4iyi"]
[ext_resource type="Texture2D" uid="uid://b2vkmquso6nbs" path="res://resources/themes/Discord-Symbol-White.svg" id="4_3u0wr"]
[ext_resource type="Texture2D" uid="uid://x7tdi6mwpo4a" path="res://resources/themes/gitlab-logo-700.svg" id="5_b3f4m"]
[ext_resource type="Texture2D" uid="uid://npomtk540ich" path="res://resources/themes/x.svg" id="5_hw12a"]
[ext_resource type="Texture2D" uid="uid://d0i3o6br684je" path="res://resources/themes/web.svg" id="8_2trou"]
[ext_resource type="Texture2D" uid="uid://c2kr2kifcs4yc" path="res://resources/themes/settings.svg" id="10_fgot1"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_56sht"]
color = Color(0.141176, 0.152941, 0.227451, 1)

[sub_resource type="Resource" id="Resource_biqgv"]
script = ExtResource("3_t4iyi")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_w4jn0"]
script = ExtResource("3_t4iyi")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_u7ruj"]
script = ExtResource("3_t4iyi")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_v4qjp"]
script = ExtResource("3_t4iyi")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[node name="ModManager" type="Window"]
auto_translate_mode = 1
title = "Manage Mods"
initial_position = 2
size = Vector2i(640, 360)
script = ExtResource("1_m2rmo")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
current_tab = 0
tab_alignment = 1
drag_to_rearrange_enabled = true
tab_count = 2
tab_0/title = "installed"
tab_1/title = "marketplace"
tab_1/disabled = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 120

[node name="Nav" type="PanelContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 26.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.647059, 0.678431, 0.796078, 1)
theme_override_font_sizes/font_size = 14
text = "nav"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer/Control/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/separator = SubResource("StyleBoxLine_56sht")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer2"]
layout_mode = 2

[node name="SmoothScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("2_ti26n")
speed = 500.0
wheel_scroll_damper = SubResource("Resource_biqgv")
dragging_scroll_damper = SubResource("Resource_w4jn0")

[node name="ModList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer2/VBoxContainer/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="OpenFolder" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
theme_override_constants/icon_max_width = 16
icon = ExtResource("3_2j5pp")

[node name="Options" type="PanelContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Options"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 8

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.647059, 0.678431, 0.796078, 1)
theme_override_font_sizes/font_size = 14
text = "options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer/Control/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/separator = SubResource("StyleBoxLine_56sht")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Options"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.803922, 0.839216, 0.956863, 1)
layout_mode = 2
texture = ExtResource("5_hw12a")
expand_mode = 3

[node name="Title" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Nothing Selected"
fit_content = true
autowrap_mode = 0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Credits" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.431373, 0.45098, 0.552941, 1)

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="Discord" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer3"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
icon = ExtResource("4_3u0wr")
expand_icon = true

[node name="Github" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer3"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
icon = ExtResource("3_juk12")
expand_icon = true

[node name="Gitlab" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer3"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
icon = ExtResource("5_b3f4m")
expand_icon = true

[node name="Link" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer3"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
icon = ExtResource("8_2trou")
expand_icon = true

[node name="SmoothScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_ti26n")
speed = 250.0
wheel_scroll_damper = SubResource("Resource_u7ruj")
dragging_scroll_damper = SubResource("Resource_v4qjp")
hide_scrollbar_over_time = true
scrollbar_hide_time = 2.0

[node name="Description" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true
text = "Select a mod on the right to manage it."

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="OpenModFolder" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(95, 0)
layout_mode = 2
theme_type_variation = &"ButtonWithPanel"
theme_override_constants/icon_max_width = 16
disabled = true
text = "Open Folder"
icon = ExtResource("3_2j5pp")

[node name="OpenSettings" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(138, 0)
layout_mode = 2
theme_type_variation = &"ButtonWithPanel"
theme_override_constants/icon_max_width = 16
disabled = true
text = "Open Mod Settings"
icon = ExtResource("10_fgot1")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ButtonWithPanel"
text = "Close"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/Nav/MarginContainer2/VBoxContainer/HBoxContainer/OpenFolder" to="." method="_on_open_folder_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer2/OpenModFolder" to="." method="_on_open_mod_folder_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/Options/MarginContainer2/VBoxContainer/HBoxContainer2/OpenSettings" to="." method="_on_open_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_close_requested"]
